WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147274
vmmap crash at JavaScriptCore: 0x31cd12f6 (the JavaScript malloc zone enumerator)
https://bugs.webkit.org/show_bug.cgi?id=147274
Summary
vmmap crash at JavaScriptCore: 0x31cd12f6 (the JavaScript malloc zone enumera...
Geoffrey Garen
Reported
2015-07-24 14:19:09 PDT
vmmap crash at JavaScriptCore: 0x31cd12f6 (the JavaScript malloc zone enumerator)
Attachments
Patch
(1.71 KB, patch)
2015-07-24 14:20 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(1.71 KB, patch)
2015-07-24 14:23 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2015-07-24 14:25 PDT
,
Geoffrey Garen
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-07-24 14:20:24 PDT
Created
attachment 257477
[details]
Patch
Joseph Pecoraro
Comment 2
2015-07-24 14:21:52 PDT
Comment on
attachment 257477
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257477&action=review
> Source/bmalloc/bmalloc/Zone.cpp:36 > + // This read sometimes fails for uknown reasons (<
rdar://problem/14093757
>).
Typo: "uknown" => "unknown"
Geoffrey Garen
Comment 3
2015-07-24 14:23:00 PDT
Created
attachment 257478
[details]
Patch
Geoffrey Garen
Comment 4
2015-07-24 14:25:44 PDT
Created
attachment 257479
[details]
Patch
Anders Carlsson
Comment 5
2015-07-24 14:27:26 PDT
Comment on
attachment 257479
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257479&action=review
> Source/bmalloc/bmalloc/Zone.cpp:39 > + fprintf(stderr, "bmalloc: error reading remote process: %d\n", error);
I find that kern_return_t values are easier to read as hex, so I suggest you use 0x%x here.
Geoffrey Garen
Comment 6
2015-07-24 14:30:26 PDT
Committed
r187362
: <
http://trac.webkit.org/changeset/187362
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug